Fix chat container auto-scroll

--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,8 @@
       </div>
       <input id="msg" placeholder="Kirim Pesan" style="width: 70%;margin-top: 15px" autofocus>
       <button type="button" style="width: 25%" id="send">Kirim</button>
-      <div style="margin-top: 15px;border: solid 1px;width: 100%;height: 200px; overflow: auto">
-        <div id="notif" style="padding: 15px"></div>
+      <div style="margin-top: 15px;border: solid 1px;width: 100%;">
+        <div id="notif" style="padding: 15px;height: 200px; overflow: auto"></div>
       </div>
     </div>
 
